# Writing_Logger

./: Cargo.toml  README.md  Writing_LoggerV2.html  entries.json  entries.md  index.html  log.md  log.txt  writing_log.md  writing_log.txt  writing_logger  writting_logger
.github/workflows/: cross-compile.yml
src/: main.rs
website/: Writing_Logger.html
writing_logger/writing_logger/: Cargo.toml
writing_logger/writing_logger/markdown_log/: Cargo.toml
writing_logger/writing_logger/writing_logger/: Cargo.toml  log.txt
writing_logger/writing_logger/writing_logger/src/: main.rs
