[package]
name = "writing_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
hex-literal = "0.3"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
